--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_draggable_list: ^1.0.0
   file_picker: ^6.1.1
   path_provider: ^2.1.2
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
